# result

./: CMakeLists.txt  README.md  clang-format.bash
include/: result.hpp
include/result/: main  main.cpp  result.hpp
test/: CMakeLists.txt  test_and.cpp  test_and_then.cpp  test_contains.cpp  test_contains_err.cpp  test_equality.cpp  test_err.cpp  test_expect.cpp  test_expect_err.cpp  test_is_err.cpp  test_is_ok.cpp  test_map.cpp  test_map_err.cpp  test_map_or.cpp  test_map_or_else.cpp  test_ok.cpp  test_or.cpp  test_or_else.cpp  test_return_types.cpp  test_unwrap.cpp  test_unwrap_err.cpp  test_unwrap_or.cpp  test_unwrap_or_default.cpp  test_unwrap_or_else.cpp
